perf: optimize system metrics collection, SSE stream, and UI rendering
- Switch CPU usage calculation to OperatingSystemMXBean (zero file I/O)
- Implement accurate htop-aligned RAM calculation via /proc/meminfo
- Single-pass JSON serialization for SSE events using SseEventBuilder
- Cache index.html template in memory on application startup
- Enforce Locale.US for decimal temperature formatting
- Cache DOM references and improve SSE error resilience in frontend script